--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
 		<meta http-equiv="Access-Control-Allow-Origin" content="*" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		
-    <title>Vite + React + TS</title>
+    <title>Менеджер задач</title>
   </head>
   <body>
     <div id="root"></div>
